--- a/stylesheets/dev/sitemap.scss
+++ b/stylesheets/dev/sitemap.scss
@@ -21,6 +21,10 @@ ul {
 			right: 0;
 			@include rems(top, 1.8);
 			height: 1px;
+
+      @media #{$phone} {
+        display: none;
+      }
 		}
 		& > li {
 			@include rems(margin, 0, 1);
@@ -51,7 +55,7 @@ ul {
 					cursor: pointer;
 				}
 			}
-			& ul {
+			& > ul {
 				@include rems(margin, 0, 1);
 				@include rems(padding, 2, 0, 0);
 				display: block;
@@ -59,8 +63,8 @@ ul {
 				@include clearfix;
 				position: relative;
 				@media #{$phone} {
-					width: 90%;
-					margin: 0 auto;
+					// width: 90%;
+					// margin: 0 auto;
 					@include rems(padding, 1, 0, 0);
 					text-align: center;
 				}
@@ -70,15 +74,15 @@ ul {
 					position: absolute;
 					background: #ccc;
 					@media #{$phone} {
-						display: none;
+						// display: none;
 					}
 				}
 				&:before {
 					width: 1px;
 					left: 0;
 					top: 0;
-					//@include rems(bottom, 1.8);
-					bottom: 0;
+					@include rems(bottom, 1.6);
+					// bottom: 0;
 				}
 				li {
 					display: block;
@@ -88,7 +92,7 @@ ul {
 					@media #{$phone} {
 						width: 100%;
 						padding: 0;
-						@include rems(margin, 0, 0, 1);
+						@include rems(padding, 0, 0, 1);
 					}
 					span {
 						background: #ededed;
@@ -109,13 +113,18 @@ ul {
 							@include rems(top, 1.8);
 						}
 					}
+          ul {
+            @media #{$phone} {
+              @include rems(padding-top, 1);
+            }
+          }
 					&:before, &:after {
 						content: '';
 						display: block;
 						position: absolute;
 						background: #ccc;
 						@media #{$phone} {
-							display: none;
+							// display: none;
 						}
 					}
 					&:before {
